cluster/apps/media/tautulli/networkpolicies/tautulli.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tautulli
  namespace: media
spec:
  description: "Policy for tautulli"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: tautulli
  ingress:
    - fromEndpoints:
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: envoy-internal
            gateway.envoyproxy.io/owning-gateway-namespace: network
            "k8s:io.kubernetes.pod.namespace": network
      toPorts:
        - ports:
            - port: "8181"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: plex
            "k8s:io.kubernetes.pod.namespace": media
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP
    - toFQDNs:
        - matchName: api.github.com
        - matchName: ghcr.io # catppuccin theme
        - matchName: pkg-containers.githubusercontent.com # catppuccin theme
        - matchName: plex.tv
        - matchName: raw.githubusercontent.com # catppuccin theme
        - matchName: secure.gravatar.com
        - matchName: tautulli.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
